...
        startAuthButton.layer.cornerRadius = 16
        startAuthButton.addTarget(
            self,
            action: #selector(startAuthButtonPressed),
            for: .touchUpInside
        )
        startAuthButton.accessibilityIdentifier = "Authenticate"
        startAuthButton.translatesAutoresizingMaskIntoConstraints = false
        return startAuthButton
    }()
    
    weak var delegate: AuthViewControllerDelegate?
    
...
        setUpScreen()
    }
    
    // MARK: - Private Methods
    
    private func setUpScreen() {
        view.accessibilityIdentifier = "AuthViewController"
        view.backgroundColor = .ypBlack
        [logo, startAuthButton].forEach { view.addSubview($0) }
        setUpConstraints()
        configureBackButton()
    }
    
...
