...
    }
    
    func setIsLiked(_ isLiked: Bool) {
        var likeImage: UIImage?
        if isLiked {
            likeImage = UIImage(named: "LikeActive")
            cellLikeButton.accessibilityIdentifier = "like button on"
        } else {
            likeImage = UIImage(named: "LikeNoActive")
            cellLikeButton.accessibilityIdentifier = "like button off"
        }
        cellLikeButton.setImage(likeImage, for: .normal)
    }
    
    @objc private func likeButtonPressed() {
        delegate?.imageListCellDidTapLike(self)
...
